# Sistema-De-Pedidos

./: CMakeLists.txt  README.md  main.cpp
Bibliotecas/: Cliente.h  Distrito.h  FuncionesAuxiliares.cpp  FuncionesAuxiliares.h  Plato.h  PlatoPedido.h
